# uniq

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/uniq-cli/: Cargo.toml
crates/uniq-cli/src/: main.rs
crates/uniq-core/: Cargo.toml
crates/uniq-core/src/: benchmark.rs  config.rs  error.rs  lib.rs  merge.rs  project.rs  research.rs  variant.rs
crates/uniq-sidecar/: Cargo.toml
crates/uniq-sidecar/src/: client.rs  lib.rs  manager.rs  protocol.rs
crates/uniq-tui/: Cargo.toml
crates/uniq-tui/src/: action.rs  app.rs  event.rs  lib.rs  theme.rs
crates/uniq-tui/src/components/: benchmark_dashboard.rs  help.rs  merge_dialog.rs  mod.rs  project_intake.rs  research_explorer.rs  status_bar.rs  technique_cards.rs  variant_builder.rs
sidecar/: pyproject.toml
sidecar/src/: __init__.py  server.py
sidecar/src/models/: __init__.py  benchmark.py  merge.py  paper.py  project.py  variant.py
sidecar/src/routes/: benchmark.py  generate.py  merge.py  project.py  research.py
sidecar/src/services/: __init__.py  benchmarker.py  claude_client.py  code_generator.py  merger.py  paper_search.py  pdf_extractor.py
