[project]
name = "uniq-sidecar"
version = "0.1.0"
description = "Python sidecar for uniq — handles PDF extraction, paper search, and Claude API calls"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pymupdf>=1.25",
    "anthropic>=0.43",
    "httpx>=0.28",
    "pydantic>=2.10",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
