[package]
name = "uniq-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI entry point for the uniq research engine"

[[bin]]
name = "uniq"
path = "src/main.rs"

[dependencies]
uniq-tui = { path = "../uniq-tui" }
uniq-core = { path = "../uniq-core" }
uniq-sidecar = { path = "../uniq-sidecar" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
toml.workspace = true
serde.workspace = true
