[package]
name = "uniq-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core domain types and logic for uniq"

[dependencies]
serde.workspace = true
serde_json.workspace = true
git2.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
toml.workspace = true
dirs.workspace = true
