[package]
name = "uniq-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python sidecar client and lifecycle manager for uniq"

[dependencies]
uniq-core = { path = "../uniq-core" }
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
