[package]
name = "uniq-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TUI interface for uniq"

[dependencies]
uniq-core = { path = "../uniq-core" }
uniq-sidecar = { path = "../uniq-sidecar" }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
